# candor

./: Cargo.toml  README.md
candor/: Cargo.toml
candor-io/: Cargo.toml
candor-io/src/: lib.rs  socketcan.rs  trc.rs
candor-tui/: Cargo.toml
candor-tui/src/: main.rs  popup.rs
candor/src/: lib.rs  stats.rs
examples/: candor.rs
src/: lib.rs  main.rs  stats.rs
src/sources/: mod.rs  peak_trace.rs  socketcan.rs
