[package]
name = "candor"
version = "0.2.0"
edition = "2021"

[dependencies]
bitvec = "1.0.1"
can-dbc = "6.0.0"
cli-log = "2.0.0"
regex = "1.10.6"
socketcan = { version = "3.3.0", optional = true }

[dev-dependencies]
clap = { version = "4.5.17", features = ["derive"] }
ratatui = "0.28.1"

[features]
socketcan = ["dep:socketcan"]
