[package]
name = "candor-tui"
version = "0.4.0"
edition = "2024"

[dependencies]
candor = { version = "0.4.0", path = "../candor" }
candor-io = { version = "0.1.0", path = "../candor-io" }
clap = { version = "4.5.32", features = ["derive"] }
ratatui = "0.29.0"
regex = "1.10.6"
derive_setters = "0.1.6"

[features]
socketcan = [ ]
